<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SV Brockscheid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_liga">Kreisliga D</string>
    <string name="sv_brockscheid">SV Brockscheid</string>
    <string name="position">%1$s %2$s</string>
    <string name="naechstes_spiel">Nächstes Spiel</string>
    <string name="letztes_spiel">Letztes Spiel</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="menu_spielplan">Spielplan</string>
    <string name="menu_uebersicht">Übersicht</string>
    <string name="menu_infos">Infos</string>
    <string name="neue_nachrichten">Neue Nachrichten Verfügbar</string>
    <string name="datum">Datum</string>
    <string name="zeit">Zeit</string>
    <string name="ort">Ort</string>
    <string name="paarung">Paarung</string>
    <string name="ergebnis">Erg</string>
    <string name="kreispokal">Bitburger Kreispokal</string>
    <string name="kreisliga">Kreisliga D</string>
    <string name="winterpause">Winterpause</string>
    <string name="neuigkeiten">Neuigkeiten!</string>
    <string name="download">Download</string>
    <string name="update_verfuegbar">Es gibt ein Update der App</string>
    <string name="icon_hinweis">Icon von Icons8</string>
    <string name="icon_link">http://icons8.com/web-app/6049/Football</string>
    <string name="menu_about">Über</string>
    <string name="versionsInfo">Version: %1$s</string>
    <string name="created_by">Diese App wurde geschrieben von</string>
    <string name="name_matthias">Matthias Kutscheid</string>
    <string name="name_david">David Veit</string>
    <string name="account_name">SVB Daten</string>
</resources>
