<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="svbrockscheid.de.svbrockscheid.TestFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/ligaTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_liga"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/posVor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ligaTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/posVor"
        android:text="@string/sv_brockscheid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/punkteBrockscheid"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sv"
        android:layout_alignParentRight="false"
        android:layout_alignTop="@+id/sv"
        android:layout_toRightOf="@+id/sv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/posNach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/naechstes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/posNach"
        android:text="@string/naechstes_spiel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/naechsteMannschaft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/naechstes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/naechsteInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/naechsteMannschaft"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/letztes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/naechsteInfos"
        android:text="@string/letztes_spiel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/letzteMannschaft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/letztes"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/letzteInfos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/letzteMannschaft"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
