<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.svbrockscheid.fragments.SpielplanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/kreispokal"
                android:textAppearance="?android:textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/kreispokal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kreispokal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/kreisliga"
                android:textAppearance="?android:textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/kreisliga"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/header3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kreisliga"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/winterpause"
                android:textAppearance="?android:textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/kreisliga2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header3"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"></LinearLayout>

        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
