<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.svbrockscheid.fragments.UebersichtsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/ligaTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/title_liga"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/posVor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ligaTitle"
                android:layout_toLeftOf="@+id/punkteVor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/punkteVor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/posVor"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/posVor"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/sv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/posVor"
                android:layout_toLeftOf="@+id/punkteBrockscheid"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/punkteBrockscheid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sv"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/sv"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/posNach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sv"
                android:layout_toLeftOf="@+id/punkteNach"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/punkteNach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/posNach"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/posNach"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/naechstes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/posNach"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/naechstes_spiel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/naechsteMannschaft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/naechstes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/naechsteInfos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/naechsteMannschaft"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/letztes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/naechsteInfos"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:text="@string/letztes_spiel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/letzteMannschaft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/letztes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/letzteInfos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/letzteMannschaft"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>